--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+
+    <!-- link CSS -->
+    <link rel="stylesheet" href="./src/style.css">
   </head>
-  <body>
-    <div id="app"></div>
+
+
+
+  <body>    
+    <div id="app">  <!-- div di Vue 3 -->
+
+      <!-- Contenuto HTML -->
+
+    </div>
+
+
+    <!-- collegamento JS -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
